<resources>
    <string name="app_name">Sentient Eye</string>
    <string name="scan_discr">Scanner icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="calculator">Calculator</string>
    <string name="goal_keep">Calories for keeping weight</string>
    <string name="goal_gain">Calories for gaining weight</string>
    <string name="goal_lose">Calories for loosing weight</string>
    <string name="manual_enter">Add food manually</string>
    <string name="find_btn">Scan code</string>
    <string name="enter_product">Enter the consist</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="dose">Dose</string>
    <string name="send_product">Add product to server</string>
    <string name="save_product">Add product to collection</string>
    <string name="food_fragment">List of eaten products</string>



</resources>
