<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_product" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/codeEdit"
            android:layout_width="290dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            android:isScrollContainer="false"
            android:scrollHorizontally="true"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/code"
            app:layout_constraintEnd_toStartOf="@+id/codeEdit"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="8dp"
            android:text="@string/calories"
            app:layout_constraintEnd_toStartOf="@+id/caloriesEdit"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/caloriesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="numberSigned|number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="290dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            android:scrollHorizontally="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fats"
            app:layout_constraintEnd_toStartOf="@+id/fatsEdit"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fatsEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="numberSigned|number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caloriesEdit" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="268dp"
            android:layout_marginEnd="8dp"
            android:text="@string/proteins"
            app:layout_constraintEnd_toStartOf="@+id/proteinsEdit"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/proteinsEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="numberSigned|number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fatsEdit" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="324dp"
            android:layout_marginEnd="8dp"
            android:text="@string/carbohydrates"
            app:layout_constraintEnd_toStartOf="@+id/carbohEdits"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/carbohEdits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="numberSigned|number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proteinsEdit" />

        <Button
            android:id="@+id/sendProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:text="@string/send_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbohEdits" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/nameEdit"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>